versions/GNDS-v2.0/GNDS/c/src/v2.0/general/ScatteringAtom.h

// --- Const-aware handles.
typedef const struct ScatteringAtomClass *const ConstHandle2ConstScatteringAtom;
typedef       struct ScatteringAtomClass *const ConstHandle2ScatteringAtom;
// +++ Set
extern_c void
ScatteringAtomE_maxSet(ConstHandle2ScatteringAtom self, ConstHandle2ConstE_max e_max);
// -----------------------------------------------------------------------------
// Child: boundAtomCrossSection
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ScatteringAtomBoundAtomCrossSectionHas(ConstHandle2ConstScatteringAtom self);
// --- Get, const
extern_c Handle2ConstBoundAtomCrossSection
ScatteringAtomBoundAtomCrossSectionGetConst(ConstHandle2ConstScatteringAtom self);
// +++ Get
extern_c Handle2BoundAtomCrossSection
ScatteringAtomBoundAtomCrossSectionGet(ConstHandle2ScatteringAtom self);
// +++ Set
extern_c void
ScatteringAtomBoundAtomCrossSectionSet(ConstHandle2ScatteringAtom self, ConstHandle2ConstBoundAtomCrossSection boundAtomCrossSection);
// -----------------------------------------------------------------------------
// Child: selfScatteringKernel
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ScatteringAtomSelfScatteringKernelHas(ConstHandle2ConstScatteringAtom self);
// --- Get, const
extern_c Handle2ConstSelfScatteringKernel
ScatteringAtomSelfScatteringKernelGetConst(ConstHandle2ConstScatteringAtom self);
// +++ Get
extern_c Handle2SelfScatteringKernel
ScatteringAtomSelfScatteringKernelGet(ConstHandle2ScatteringAtom self);
// +++ Set
extern_c void
ScatteringAtomSelfScatteringKernelSet(ConstHandle2ScatteringAtom self, ConstHandle2ConstSelfScatteringKernel selfScatteringKernel);
// -----------------------------------------------------------------------------
// Child: T_effective
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ScatteringAtomT_effectiveHas(ConstHandle2ConstScatteringAtom self);
// --- Get, const
extern_c Handle2ConstT_effective
ScatteringAtomT_effectiveGetConst(ConstHandle2ConstScatteringAtom self);
// +++ Get
extern_c Handle2T_effective
ScatteringAtomT_effectiveGet(ConstHandle2ScatteringAtom self);
// +++ Set
extern_c void
ScatteringAtomT_effectiveSet(ConstHandle2ScatteringAtom self, ConstHandle2ConstT_effective T_effective);