versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/ScatteringAtom.f03


!! Set
subroutine ScatteringAtomE_maxSet(handle, fieldHandle) &
      bind(C, name='ScatteringAtomE_maxSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ScatteringAtomE_maxSet


!! -----------------------------------------------------------------------------
!! Child: boundAtomCrossSection
!! -----------------------------------------------------------------------------

!! Has
function ScatteringAtomBoundAtomCrossSectionHas(handle) &
      bind(C, name='ScatteringAtomBoundAtomCrossSectionHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ScatteringAtomBoundAtomCrossSectionHas

!! Get, const
function ScatteringAtomBoundAtomCrossSectionGetConst(handle) &
      bind(C, name='ScatteringAtomBoundAtomCrossSectionGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ScatteringAtomBoundAtomCrossSectionGetConst

!! Get
function ScatteringAtomBoundAtomCrossSectionGet(handle) &
      bind(C, name='ScatteringAtomBoundAtomCrossSectionGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ScatteringAtomBoundAtomCrossSectionGet

!! Set
subroutine ScatteringAtomBoundAtomCrossSectionSet(handle, fieldHandle) &
      bind(C, name='ScatteringAtomBoundAtomCrossSectionSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ScatteringAtomBoundAtomCrossSectionSet


!! -----------------------------------------------------------------------------
!! Child: selfScatteringKernel
!! -----------------------------------------------------------------------------

!! Has
function ScatteringAtomSelfScatteringKernelHas(handle) &
      bind(C, name='ScatteringAtomSelfScatteringKernelHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ScatteringAtomSelfScatteringKernelHas

!! Get, const
function ScatteringAtomSelfScatteringKernelGetConst(handle) &
      bind(C, name='ScatteringAtomSelfScatteringKernelGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ScatteringAtomSelfScatteringKernelGetConst

!! Get
function ScatteringAtomSelfScatteringKernelGet(handle) &
      bind(C, name='ScatteringAtomSelfScatteringKernelGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ScatteringAtomSelfScatteringKernelGet

!! Set
subroutine ScatteringAtomSelfScatteringKernelSet(handle, fieldHandle) &
      bind(C, name='ScatteringAtomSelfScatteringKernelSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ScatteringAtomSelfScatteringKernelSet


!! -----------------------------------------------------------------------------
!! Child: T_effective
!! -----------------------------------------------------------------------------

!! Has
function ScatteringAtomT_effectiveHas(handle) &
      bind(C, name='ScatteringAtomT_effectiveHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ScatteringAtomT_effectiveHas

!! Get, const
function ScatteringAtomT_effectiveGetConst(handle) &
      bind(C, name='ScatteringAtomT_effectiveGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ScatteringAtomT_effectiveGetConst

!! Get
function ScatteringAtomT_effectiveGet(handle) &
      bind(C, name='ScatteringAtomT_effectiveGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ScatteringAtomT_effectiveGet

!! Set
subroutine ScatteringAtomT_effectiveSet(handle, fieldHandle) &
      bind(C, name='ScatteringAtomT_effectiveSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ScatteringAtomT_effectiveSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalScatteringAtom
